# mathplot

./: CMakeLists.txt  README.md  graph.c  graph.h  main.c  maths.c  maths.h  parser.c  parser.h  stb_image_write.c  types.h
